--- a/CoffeeCraftJava/app/src/main/res/layout/newaccountactivity.xml
+++ b/CoffeeCraftJava/app/src/main/res/layout/newaccountactivity.xml
@@ -77,7 +77,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
-        android:text="Create an account"
+        android:text="Next"
         android:textSize="22dp"
         android:paddingHorizontal="30dp"
         android:paddingVertical="10dp"
