--- a/CoffeeCraftJava/app/src/main/res/layout/activity_coffee_suggestion.xml
+++ b/CoffeeCraftJava/app/src/main/res/layout/activity_coffee_suggestion.xml
@@ -4,42 +4,87 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <ScrollView
+    <LinearLayout
+        android:id="@+id/coffeeImagesLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/buttons_layout">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_above="@id/buttonsLayout">
 
         <LinearLayout
-            android:id="@+id/coffeeImagesLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/image1"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="100dp"
+                android:scaleType="centerInside"
+                android:adjustViewBounds="true" />
+
+            <ImageView
+                android:id="@+id/image2"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="100dp"
+                android:scaleType="centerInside"
+                android:adjustViewBounds="true" />
         </LinearLayout>
-    </ScrollView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/image3"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="100dp"
+                android:scaleType="centerInside"
+                android:adjustViewBounds="true" />
+
+            <ImageView
+                android:id="@+id/image4"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="100dp"
+                android:scaleType="centerInside"
+                android:adjustViewBounds="true" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/buttonsLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp" />
 
     <LinearLayout
-        android:id="@+id/buttons_layout"
+        android:id="@+id/buttonsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:gravity="center_horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="32dp">
 
         <Button
             android:id="@+id/buyButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Buy"
-            android:layout_weight="1"
-            android:layout_marginEnd="8dp"/>
+            android:layout_marginEnd="16dp" />
 
         <Button
             android:id="@+id/getNewSuggestionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Get New Suggestion"
-            android:layout_weight="1"
-            android:layout_marginStart="8dp"/>
+            android:text="Get New Suggestion" />
     </LinearLayout>
 
 </RelativeLayout>
