--- a/CoffeeCraftJava/app/src/main/res/layout/activity_user_info.xml
+++ b/CoffeeCraftJava/app/src/main/res/layout/activity_user_info.xml
@@ -6,7 +6,7 @@
     android:padding="16dp"
     tools:context=".UserInfoActivity">
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/userInfoTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,7 +16,15 @@
         android:padding="16dp"
         android:text="User Info will be displayed here" />
 
-    <Button
+
+    <ListView
+        android:id="@+id/listViewCoffee"
+        android:layout_marginTop="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="341dp"
+        android:layout_gravity="center" />
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
