--- a/CoffeeCraftJava/app/src/main/res/layout/coffee_item.xml
+++ b/CoffeeCraftJava/app/src/main/res/layout/coffee_item.xml
@@ -8,20 +8,20 @@
         android:id="@+id/coffeeImageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/default_coffee_image"
-        android:scaleType="centerCrop"
+        android:layout_gravity="center_horizontal"
         android:adjustViewBounds="true"
-        android:layout_gravity="center_horizontal" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/default_coffee_image" />
 
     <TextView
         android:id="@+id/coffeeNameTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:gravity="center_horizontal"
         android:text="Coffee Name"
         android:textColor="@android:color/black"
         android:textSize="16sp"
-        android:textStyle="bold"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="8dp" />
+        android:textStyle="bold" />
 
 </LinearLayout>
