--- a/CoffeeCraftJava/app/src/main/res/layout/activity_user_info.xml
+++ b/CoffeeCraftJava/app/src/main/res/layout/activity_user_info.xml
@@ -1,35 +1,91 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
+    android:background="@color/white"
     tools:context=".UserInfoActivity">
 
-    <com.google.android.material.textview.MaterialTextView
+    <!-- User Info Title -->
+    <TextView
         android:id="@+id/userInfoTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textColor="@color/coffee"
         android:gravity="center"
+        android:textStyle="bold"
         android:padding="16dp"
-        android:text="User Info will be displayed here" />
+        android:text="User Info" />
 
+    <!-- Graphic Element (Divider Line) -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/cardview_light_background"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"/>
 
+    <!-- Ranking Visualization -->
+    <TableLayout
+        android:id="@+id/tableLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:stretchColumns="*"
+        android:layout_marginTop="16dp">
+
+        <!-- Table Header -->
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="@color/coffee"
+                android:textStyle="bold"
+                android:text="Rank" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="@color/coffee"
+                android:textStyle="bold"
+                android:text="Name" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="@color/coffee"
+                android:textStyle="bold"
+                android:text="Score" />
+        </TableRow>
+
+        <!-- Table Rows (Ranking Data) -->
+        <!-- Add TableRow elements here with ranking data -->
+
+    </TableLayout>
+
+    <!-- ListView for Historic Data -->
     <ListView
         android:id="@+id/listViewCoffee"
-        android:layout_marginTop="30dp"
-        android:layout_width="wrap_content"
-        android:layout_height="341dp"
-        android:layout_gravity="center" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:divider="@null"
+        android:dividerHeight="0dp"/>
 
+    <!-- Back Button -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back to Main Activity"
         android:layout_gravity="center"
-        android:layout_marginTop="16dp"/>
+        app:backgroundTint="@color/coffee"
+        android:textColor="@color/white"
+        android:layout_marginTop="16dp"
+        android:elevation="4dp"/>
 
 </LinearLayout>
