--- a/CoffeeCraftJava/app/src/main/res/layout/coffeesuggestion.xml
+++ b/CoffeeCraftJava/app/src/main/res/layout/coffeesuggestion.xml
@@ -1,4 +1,3 @@
-<!-- activity_coffee_suggestion.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,9 +13,8 @@
         android:orientation="horizontal">
 
         <com.google.android.material.textview.MaterialTextView
-            android:layout_marginLeft="50dp"
+            android:id="@+id/coffeeCraftText"
             android:layout_width="wrap_content"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:fontFamily="@font/croissant"
             android:gravity="center"
@@ -26,36 +24,34 @@
             android:textSize="28sp" />
 
         <ImageView
+            android:id="@+id/logoImage"
             android:layout_width="wrap_content"
-            android:layout_marginEnd="50dp"
             android:layout_height="100dp"
-            android:layout_weight="1"
+            android:layout_marginStart="16dp"
             android:src="@mipmap/logo" />
-
     </LinearLayout>
 
     <ImageView
         android:id="@+id/coffeeImage"
         android:layout_width="wrap_content"
         android:layout_height="300dp"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
         android:src="@drawable/default_coffee_image" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/coffeeDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/coffeeImage"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"
         android:text="Coffee Description" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/buttonNext"
@@ -74,7 +70,6 @@
             android:scaleType="fitCenter"
             android:backgroundTint="@color/transparent"
             android:src="@drawable/v" />
-
     </LinearLayout>
-
 </LinearLayout>
+
