--- a/CoffeeCraftJava/app/src/main/res/layout/activity_user_info.xml
+++ b/CoffeeCraftJava/app/src/main/res/layout/activity_user_info.xml
@@ -13,7 +13,7 @@
         android:id="@+id/userInfoTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textColor="@color/coffee"
         android:gravity="center"
         android:textStyle="bold"
@@ -75,6 +75,68 @@
         android:layout_marginBottom="16dp"
         android:divider="@null"
         android:dividerHeight="0dp"/>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="20dp"
+        android:layout_gravity="center">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/reviewButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="How good was the last prediction ?"
+            android:layout_gravity="center"
+            app:backgroundTint="@color/coffee"
+            android:textColor="@color/white"
+            android:layout_marginTop="16dp"
+            android:elevation="4dp"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:visibility="invisible"
+            android:id="@+id/reviewView">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/coffeeType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/coffee"
+                android:textStyle="bold"
+                android:text="Coffee type"/>
+
+            <LinearLayout
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/buttonNext"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_margin="15dp"
+                    android:scaleType="fitCenter"
+                    android:backgroundTint="@color/transparent"
+                    android:src="@drawable/cross" />
+
+                <ImageButton
+                    android:id="@+id/buttonBuy"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_margin="15dp"
+                    android:scaleType="fitCenter"
+                    android:backgroundTint="@color/transparent"
+                    android:src="@drawable/v" />
+            </LinearLayout>
+        </LinearLayout>
+    </FrameLayout>
 
     <!-- Back Button -->
     <com.google.android.material.button.MaterialButton
